# pc

lw1/ExtractFiles/: Application.cpp  Application.h  CMakeLists.txt  README.md
lw1/ExtractFiles/Decompressor/: IDecompressor.h  ParallelDecompressor.cpp  ParallelDecompressor.h  SequentialDecompressor.cpp  SequentialDecompressor.h
lw1/ExtractFiles/Extractor/: Extractor.cpp  Extractor.h
lw1/ExtractFiles/Process/: Pipe.cpp  Pipe.h  Process.cpp  Process.h
lw1/MakeArchive/: Application.cpp  Application.h  Archiver.cpp  CMakeLists.txt  ICompressor.h  ParallelCompressor.cpp  Process.cpp  README.md  SequentialCompressor.cpp  main.cpp
lw1/MakeArchive/Archiver/: Archiver.cpp  Archiver.h
lw1/MakeArchive/Compressor/: ParallelCompressor.cpp  ParallelCompressor.h  SequentialCompressor.cpp  SequentialCompressor.h
lw1/MakeArchive/Process/: Process.cpp  Process.h
lw1/MakeArchive/Utils/: FileUtils.h
